<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:text="@string/upload_comic"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_question"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/switchNewComic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newComic" />
        <Button
            android:id="@+id/switchExistComic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existComic" />
    </LinearLayout>

</LinearLayout>