<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadChapterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="334dp"
        android:layout_height="211dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_undraw_update_uxn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="460dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">
        <LinearLayout
            android:id="@+id/layoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0">
            <EditText
                android:id="@+id/comicNameId"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape"
                android:hint="@string/chapterName"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="10dp"
                android:text="@string/UploadChapter"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/mainImageId"
                android:layout_width="346dp"
                android:layout_height="213dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/shape" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0">

                <Button
                    android:id="@+id/chooseFileId"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/chooseFile"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/saveChap"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.059"
                    app:layout_constraintStart_toEndOf="@+id/chooseFileId"
                    app:layout_constraintTop_toBottomOf="@+id/mainImageId" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView130"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:text="@string/messageAgain"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseFileId" />

            <TextView
                android:id="@+id/uploadedCounter"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/messageFile"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView130" />

            <Button
                android:id="@+id/finishBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:text="@string/finishChap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uploadedCounter" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>